@@ -1,5 +1,5 @@
 /*
- * Copyright 2019-2021 the original author or authors.
+ * Copyright 2019-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -81,13 +81,13 @@ public class Story
         return IntStream.range(0, partition)
                         .mapToObj(index -> scenariosPerExample.stream()
                                                               .map(l -> l.get(index))
-                                                              .collect(Collectors.toList()))
+                                                              .toList())
                         .map(s -> s.stream()
                                    .reduce(Story::merge))
                         .filter(Optional::isPresent)
                         .map(Optional::get)
                         .peek(s -> adjustScenarioWithLifecycle(s.getExamples().getParameters(), lifecycleParameters))
-                        .collect(Collectors.toList());
+                        .toList();
     }
 
     private static Scenario merge(Scenario left, Scenario right)
