@@ -1,5 +1,5 @@
 /*
- * Copyright 2019-2022 the original author or authors.
+ * Copyright 2019-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -25,7 +25,6 @@ import java.util.Optional;
 import java.util.function.Consumer;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
 import org.apache.commons.lang3.RegExUtils;
 import org.apache.commons.lang3.StringUtils;
@@ -105,7 +104,7 @@ public final class ManualStepConverter
     {
         return steps.stream().map(Step::getValue)
                              .map(ManualStepConverter::cutManualIdentifier)
-                             .collect(Collectors.toList());
+                             .toList();
     }
 
     public static String cutManualIdentifier(String step)
