@@ -1,5 +1,5 @@
 /*
- * Copyright 2019-2021 the original author or authors.
+ * Copyright 2019-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -24,7 +24,6 @@ import static org.mockito.Mockito.when;
 import java.util.List;
 import java.util.Map;
 import java.util.Properties;
-import java.util.stream.Collectors;
 
 import org.apache.commons.lang3.StringUtils;
 import org.jbehave.core.model.Meta;
@@ -77,9 +76,7 @@ class MetaBasedStoryExecutionPriorityTests
 
     private static List<Story> applySort(String key, List<Story> stories)
     {
-        return stories.stream()
-                      .sorted(MetaBasedStoryExecutionPriority.byNumericMetaValue(key))
-                      .collect(Collectors.toList());
+        return stories.stream().sorted(MetaBasedStoryExecutionPriority.byNumericMetaValue(key)).toList();
     }
 
     private static Story create(String name, Map<String, String> metaValues)
