@@ -1,5 +1,5 @@
 /*
- * Copyright 2019-2020 the original author or authors.
+ * Copyright 2019-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -15,8 +15,6 @@
  */
 
 package org.vividus.csv;
-
-import static java.util.stream.Collectors.toList;
 
 import java.util.List;
 
@@ -48,11 +46,11 @@ public class CsvFileData
 
     public List<Object[]> getData()
     {
-        return data.stream().map(Object[]::clone).collect(toList());
+        return data.stream().map(Object[]::clone).toList();
     }
 
     public void setData(List<Object[]> data)
     {
-        this.data = data.stream().map(Object[]::clone).collect(toList());
+        this.data = data.stream().map(Object[]::clone).toList();
     }
 }
