@@ -1,5 +1,5 @@
 /*
- * Copyright 2019-2022 the original author or authors.
+ * Copyright 2019-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -20,7 +20,6 @@ import java.io.IOException;
 import java.io.UncheckedIOException;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import org.jbehave.core.embedder.Embedder;
 import org.jbehave.core.junit.JUnit4StoryRunner;
@@ -62,7 +61,7 @@ public class StoriesRunner extends AbstractTestRunner
     @Override
     public List<String> storyPaths()
     {
-        return getPaths().values().stream().flatMap(List::stream).collect(Collectors.toList());
+        return getPaths().values().stream().flatMap(List::stream).toList();
     }
 
     private Map<String, List<String>> getPaths()
